--- a/mmg.html
+++ b/mmg.html
@@ -557,7 +557,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
                    
 
 	 <center>
-					<img src="https://scontent.flos1-2.fna.fbcdn.net/v/t39.30808-6/463372803_122112145514550840_1310625912123763506_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEAth034anlSX5z8Vz08uU8vhcV-qxEGtm-FxX6rEQa2SYYrqekt7OwO3JTaD0jur6JkrFqkAx8_SkD7FX-rKsS&_nc_ohc=BVRedt4zsykQ7kNvgFeLmAE&_nc_zt=23&_nc_ht=scontent.flos1-2.fna&_nc_gid=Axdxneeq_HcqphqAR8dV6oF&oh=00_AYCS6y7KTQqedayrtmuwmWI7Rz5EH9GQ3M9mBSAfNq18gg&oe=671554FB" width="100%" alt="logo" class="logo"></center>
+					<img src="https://scontent.fabb1-2.fna.fbcdn.net/v/t39.30808-6/463627691_122112841796550840_5159483262353023098_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeEib2fOIYLKiBSthbQgOESuFYsRENwhv6YVixEQ3CG_ppfbXcXSRmRzk-teXCQ6aCPpHaWDVXy5zboPKus68LyZ&_nc_ohc=UOjhn5wlxJUQ7kNvgHVJb4a&_nc_zt=23&_nc_ht=scontent.fabb1-2.fna&_nc_gid=AEzvmfFjmETzMOv350cCrzI&oh=00_AYA6-EsPShnFs0-PZrBxZEbJf5q8e_38Rp-8AWpOpzUNZQ&oe=671863A0" width="100%" alt="logo" class="logo"></center>
 					<br>
 						<marquee style="color:black">Recrutement du personnel ad hoc de GPC 2024 : une opportunité continue pour tous les candidats éligibles, car GPC recrute actuellement du personnel pour occuper quelques postes. Voulez-vous faire partie de l'équipe? Consultez d'autres informations.</marquee><br/>
                
