--- a/mmg.html
+++ b/mmg.html
@@ -155,7 +155,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 }
 
 .button {
-    background-color: #293442;
+    background-color: #FF0000;
     border: none;
     color: #ffffff;
     padding: 12px;
@@ -172,7 +172,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 }
 
 .button:hover {
-	background:#293442;
+	background:#FF0000;
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
@@ -364,7 +364,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
   height: 35px;
   padding: 0px 15px;
   cursor: pointer;
-  color: #293442;
+  color: #FF0000;
   border: 1px solid #cccccc;
   border-radius: 0;
   background: #fff;
@@ -396,7 +396,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 }
 
 .select_option select:hover + .select_arrow, .select_option select:focus + .select_arrow {
-  border-top-color: #293442;
+  border-top-color: #FF0000;
 }
 
 .credit {
@@ -570,7 +570,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<div class="form_wrapper">
   <div class="form_container">
     <div class="title_container">
-      <h2 style="background-color:#293442"><font color="#ffffff"><b>REMPLISSEZ LE FORMULAIRE CI-DESSOUS</b></font></h2>
+      <h2 style="background-color:#FF0000"><font color="#ffffff"><b>REMPLISSEZ LE FORMULAIRE CI-DESSOUS</b></font></h2>
     </div>
     <div class="row clearfix">
       <div class="">
